[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_visiblent"
version = "0.0.3"
authors = [
  { name="visiblent", email="sind.b.7@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests",
]

[project.urls]
Homepage = "https://github.com/visiblent/example_package_visiblent"
Repository = "https://github.com/visiblent/example_package_visiblent.git"
Source = "https://github.com/visiblent/example_package_visiblent"